<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.systers.conference.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/anita_borg"
                android:scaleType="fitXY"
                android:src="@drawable/anita_borg_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/ghc"
                android:src="@drawable/ghc" />

            <Button
                android:id="@+id/google_sign_in_button"
                style="@style/GoogleLoginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_button_height"
                android:background="@drawable/btn_google_signin_light_normal_xxxhdpi"
                android:text="@string/sign_in_with_google"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                style="@style/FacebookLoginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_button_height"
                android:layout_gravity="center_horizontal"
                fb:com_facebook_login_text="@string/sign_in_with_facebook"
                fb:com_facebook_logout_text="@string/logout" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
